updated text alignment

--- a/public/css/myresume.css
+++ b/public/css/myresume.css
@@ -892,7 +892,9 @@ body.offcanvas {
     border-bottom: 2px solid #2fa499; }
   .services.color-6 {
     border-bottom: 2px solid #4054b2; }
-
+.services > p {
+  text-align: justify;
+}
 .services {
   margin-bottom: 20px;
   position: relative;
